--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,15 @@
+body {
+    box-sizing: border-box;
+    background-color: #000;
+    overflow: hidden;
+}
+
 .background {
     margin: 0;
     padding: 0;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
 
     video {
         display: flex;
@@ -20,6 +26,10 @@
         background-color: #000;
     }
 
+    .imageBackground {
+        display: none;
+    }
+
     audio {
         display: none;
     }
@@ -30,9 +40,7 @@
         justify-content: space-between;
         width: 100%;
         height: 100%;
-        padding: 2rem;
-
-
+        padding: 4rem 2rem;
 
         .muteIcon {
             cursor: pointer;
@@ -43,10 +51,30 @@
                 width: 7rem;
                 height: 7rem;
             }
+        }
+    }
 
+    @media screen and (max-width: 900px) {
+        .imageBackground {
+            display: flex;
+            position: absolute;
+            height: 120%;
+            left: -40rem;
+            top: -10rem;
+            z-index: -99;
+            opacity: 0.5;
         }
 
+        .content {
+            flex-direction: column;
+            align-items: center;
+        }
 
+        video {
+            display: none;
+        }
     }
+
+
 
 }
