--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -7,30 +7,33 @@ $color-1: #F554D1;
 $color-2: #7978FF;
 $color-3: #4649FF;
 $color-4: #1D1CE5;
-$text-color: rgb(19, 19, 19);
+$text-color: #b6b6ff;
 
+* {
+    box-sizing: border-box;
+}
 
 .cardSection {
     display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0rem 8rem;
+    flex-direction: raw;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0rem 4rem;
     width: 100%;
 
     .card {
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        background-color: white;
-        border-radius: 1.4rem;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgb(12, 12, 12);
+        border-radius: 24px;
         box-shadow: 1rem 1rem 2rem rgba(70, 73, 255, 0.5);
-        width: 30rem;
-        height: auto;
-        overflow: hidden;
+        width: 480px;
+        height: 780px;
         position: relative;
-        z-index: 1;
-        // opacity: 0.4;
+        overflow: hidden;
+        cursor: pointer;
 
         .image {
             display: flex;
@@ -49,6 +52,12 @@ $text-color: rgb(19, 19, 19);
             .logo {
                 position: relative;
                 bottom: 3.5rem;
+                padding: 0rem 2rem;
+
+                @media screen and (max-width: 600px) {
+                    width: 90%;
+                }
+
             }
         }
 
@@ -57,6 +66,10 @@ $text-color: rgb(19, 19, 19);
             flex-direction: column;
             color: $text-color;
             padding: 1rem 2rem 2rem 2rem;
+
+            @media screen and (max-width: 600px) {
+                padding: 1.5rem;
+            }
 
             .tagSection {
                 display: flex;
@@ -83,12 +96,15 @@ $text-color: rgb(19, 19, 19);
             }
 
             .shortBiography {
+                display: flex;
                 font-size: 1rem;
                 font-family: $primary-font;
                 font-weight: 400;
+                line-height: 1.6rem;
             }
 
             .quote {
+                display: flex;
                 margin: 1rem 0rem 0rem 0rem;
                 padding: 1rem 3rem;
                 background-color: rgba(121, 120, 255, 0.1);
@@ -108,85 +124,201 @@ $text-color: rgb(19, 19, 19);
                         color: $text-color;
                     }
                 }
-
-            }
-
-        }
-
-
-
-
-
-    }
-
-    .animatedBorder {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: black;
-        border-radius: 1.6rem;
-        width: 31rem;
-        height: 48.2rem;
-        overflow: hidden;
-        position: absolute;
-        left: 10rem;
-        z-index: -5;
-
-        ::after {
-            content: '';
-            position: absolute;
-            left: -17.5rem;
-            top: -8rem;
-            width: 65rem;
-            height: 65rem;
-            background-image: conic-gradient(transparent, transparent, transparent, $color-2);
-            animation: Border 2s linear infinite;
-            animation-delay: 1s;
-        }
-
-        @keyframes Border {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
             }
         }
 
-        ::before {
-            content: '';
-            position: absolute;
-            left: -17.5rem;
-            top: -8rem;
-            width: 65rem;
-            height: 65rem;
-            background-image: conic-gradient(transparent, transparent, transparent, $color-1);
-            animation: Border 2s linear infinite;
+        .cardBack {
+            display: none;
         }
 
-        @keyframes Border {
-            0% {
-                transform: rotate(0deg);
+        &:hover {
+
+            .image,
+            .text {
+                display: none;
             }
 
-            100% {
-                transform: rotate(360deg);
+            .cardBack {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                background-color: rgb(12, 12, 12);
+                border-radius: 24px;
+                box-shadow: 1rem 1rem 2rem rgba(70, 73, 255, 0.5);
+                width: 460px;
+                height: 760px;
+                position: relative;
+                cursor: pointer;
+                z-index: 3;
+
+                @media screen and (max-width: 600px) {
+                    width: 326px;
+                    border-radius: 20px;
+                }
+
+
+                .text {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 2rem;
+                    color: $text-color;
+                    padding: 1rem 2rem 2rem 2rem;
+
+                    @media screen and (max-width: 600px) {
+                        padding: 1.5rem;
+                        width: auto;
+                        gap: 1rem;
+                        justify-content: flex-start;
+                    }
+
+                    .story1 {
+                        display: flex;
+                        font-size: 1rem;
+                        font-family: $primary-font;
+                        font-weight: 400;
+                        line-height: 1.6rem;
+                        color: $text-color;
+
+                        @media screen and (max-width: 600px) {
+                            display: none;
+                        }
+                    }
+
+                    .story2 {
+
+                        display: none;
+
+                        @media screen and (max-width: 600px) {
+                            display: flex;
+                            font-size: 1rem;
+                            font-family: $primary-font;
+                            font-weight: 400;
+                            line-height: 1.6rem;
+                            color: $text-color;
+                        }
+                    }
+
+                    .icon {
+                        width: 1.5rem;
+                        height: 1.5rem;
+                    }
+
+                    a {
+                        text-decoration: none;
+                        display: flex;
+                        align-items: center;
+                        gap: 1rem;
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: center;
+                        color: $color-2;
+                        border-radius: .8rem;
+                        padding: 0rem 1.5rem;
+                        transition: 0.3s;
+                        background-color: rgba(121, 120, 255, 0.1);
+                        width: fit-content;
+
+                        p {
+                            font-family: $secondary-font;
+                            color: $color-2;
+                        }
+
+                        svg path {
+                            fill: $color-2;
+                        }
+
+                        &:hover {
+
+                            background-color: $color-2;
+
+                            p {
+                                color: white;
+                            }
+
+                            svg path {
+                                fill: white;
+                            }
+                        }
+                    }
+                }
+
+            }
+
+            .animatedBorder {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                background-color: rgb(12, 12, 12);
+                border-radius: 24px;
+                box-shadow: 1rem 1rem 2rem rgba(70, 73, 255, 0.5);
+                width: 480px;
+                height: 780px;
+                position: absolute;
+                overflow: hidden;
+                z-index: 2;
+
+                ::after {
+                    content: '';
+                    position: absolute;
+                    left: -17.5rem;
+                    top: -8rem;
+                    width: 65rem;
+                    height: 65rem;
+                    background-image: conic-gradient(transparent, transparent, transparent, $color-2);
+                    animation: Border 2s linear infinite;
+                    animation-delay: 1s;
+
+                }
+
+                @keyframes Border {
+                    0% {
+                        transform: rotate(0deg);
+                    }
+
+                    100% {
+                        transform: rotate(360deg);
+                    }
+                }
+
+                ::before {
+                    content: '';
+                    position: absolute;
+                    left: -17.5rem;
+                    top: -8rem;
+                    width: 65rem;
+                    height: 65rem;
+                    background-image: conic-gradient(transparent, transparent, transparent, $color-1);
+                    animation: Border 2s linear infinite;
+
+                }
+
+                @keyframes Border {
+                    0% {
+                        transform: rotate(0deg);
+                    }
+
+                    100% {
+                        transform: rotate(360deg);
+                    }
+                }
+
+                span {
+                    position: absolute;
+                    inset: 0.5rem;
+                    border-radius: 16px;
+                    background-color: rgb(12, 12, 12);
+                    z-index: 1;
+
+                }
             }
         }
-
-        span {
-            position: absolute;
-            inset: 0.5rem;
-            border-radius: 1.4rem;
-            background-color: black;
-            z-index: 1;
-        }
-
     }
 
     .graff {
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
         z-index: -10;
@@ -197,11 +329,11 @@ $text-color: rgb(19, 19, 19);
             height: auto;
             left: -14rem;
             top: 4rem;
-            animation: Neon 0.1s ease-in-out 1s infinite;
+            animation: Neon 0.15s ease-in-out 1s infinite;
 
             @keyframes Neon {
                 0% {
-                    opacity: 0.9;
+                    opacity: 0.6;
                 }
 
                 50% {
@@ -209,7 +341,7 @@ $text-color: rgb(19, 19, 19);
                 }
 
                 100% {
-                    opacity: 0.9;
+                    opacity: 0.6;
                 }
             }
         }
@@ -219,7 +351,7 @@ $text-color: rgb(19, 19, 19);
             width: 25rem;
             height: auto;
             left: 20rem;
-            top: 28rem;
+            top: 32rem;
             animation: Neon 2s ease-in-out 1s infinite;
 
             @keyframes Neon {
@@ -242,6 +374,10 @@ $text-color: rgb(19, 19, 19);
                 100% {
                     opacity: 0.8;
                 }
+            }
+
+            @media screen and (max-width: 600px) {
+                left: 10rem;
             }
         }
     }
